add admin stats route
